[project]
name = "comfyui-prediction"
description = "Fully customizable Classifier Free Guidance for ComfyUI."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/redhottensors/ComfyUI-Prediction"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Prediction"
Icon = ""
